src/objects/Process_Defect__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>Defect__c</fullName>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Process Defects</relationshipLabel>
        <relationshipName>Process_Defects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Process_Defect_Id__c</fullName>
        <description>Unique process defect junction record</description>
        <label>Process Defect Id</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Standard_Operational_Process__c</fullName>
        <label>Standard Operational Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Process Defects</relationshipLabel>
        <relationshipName>Process_Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Process Defect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Process_Defects</fullName>
        <columns>NAME</columns>
        <columns>Standard_Operational_Process__c</columns>
        <columns>Defect__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Process Defects</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Process Defect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>